<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37474f"
    android:orientation="vertical"
    tools:context=".ui.detail.MovieDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#37474f"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/background_imageview_content_desc"
                android:foreground="#BE000000"
                android:scaleType="centerCrop"
                tools:src="@drawable/film_poster_a_start_is_born" />

            <androidx.cardview.widget.CardView
                android:layout_width="125dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="-100dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/movie_poster_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/card_imageview_content_desc"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/film_poster_a_start_is_born" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Movie Title" />

                <TextView
                    android:id="@+id/movie_year_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/white"
                    tools:text="2018" />

                <TextView
                    android:id="@+id/movie_rating_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textColor="@color/white"
                    tools:text="User Rating : 75%" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/overview_textview"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_overview_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="128dp"
                    android:textColor="@color/white"
                    tools:text="Overview Text" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="350dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_favorite_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:padding="16dp"
        android:text="Add to Favorite"
        android:textColor="#37474f"
        android:drawableLeft="@drawable/ic_favorite_outline" />

</RelativeLayout>