<resources>
    <string name="app_name">Movie Catalogue Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_imageview_content_desc">Card ImageView</string>
    <string name="background_imageview_content_desc">Background Imageview</string>
    <string name="overview_textview">Overview</string>
    <string name="movie_tab_text">Movies</string>
    <string name="tvshows_tab_text">TV Shows</string>
    <string name="movie_icon_content_desc">Movie Icon</string>
    <string name="moviedetail_userrating">User Rating : %d%%</string>
    <string name="error_message_toast">There\'s an error.</string>
    <string name="favorite_title">Favorite</string>
</resources>